--- a/PasswordGenrator/index.html
+++ b/PasswordGenrator/index.html
@@ -13,20 +13,20 @@
        
         <h2 class="Password_text" >Password Generator</h2>
         <div class="inputfield"> 
-            <input readonly placeholder="Password" class="display"> 
+            <input readonly placeholder="Password" class="password"> 
             <button class="copybtn" ><i class="fa-regular fa-copy"></i></button> 
         </div>
             <div class="password-length"  >
                 <p>Password Length</p>
-                <div class="Password Length" >0</div>
+                <div class="Password-Length" >0</div>
             </div>     
 
-            <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+            <input type="range" min="1" max="20" value="50" class="slider" id="myRange">
             <div class="checkboxes">
-              <div>  <input type="checkbox"> Include Uppercase Letter </div>
-              <div>  <input type="checkbox"> Include Lowercase Letter </div>
-              <div>  <input type="checkbox"> Include Numbers </div> 
-              <div>  <input type="checkbox"> Include Symbols </div>
+              <div><input class="Uppercase" type="checkbox"> Include Uppercase Letter </div>
+              <div><input class="Lowercase" type="checkbox"> Include Lowercase Letter </div>
+              <div><input class="Numbers" type="checkbox"> Include Numbers </div> 
+              <div><input class="Symbols" type="checkbox"> Include Symbols </div>
             </div>
         <div class="strength-indigator">
             <p>Strength</p>
@@ -35,5 +35,6 @@
         <button class="Generate-password" >GENERATE PASSWORD</button>
     </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
