--- a/PasswordGenrator/index.html
+++ b/PasswordGenrator/index.html
@@ -14,7 +14,10 @@
         <h2 class="Password_text" >Password Generator</h2>
         <div class="inputfield"> 
             <input readonly placeholder="Password" class="password"> 
-            <button class="copybtn" ><i class="fa-regular fa-copy"></i></button> 
+            <button onclick="copyContent();" class="copybtn" > 
+                <span class="copyMsg" >copied</span>
+                 <i class="fa-regular fa-copy"></i>
+            </button> 
         </div>
             <div class="password-length"  >
                 <p>Password Length</p>
