--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -19,11 +19,14 @@
             <input class="cityInput" type="text" placeholder="Search for city..." >
             <button class="searchbtn" ><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
+        <div class="weatherResult">
         <p class="cityName" >delhi</p>
+        <p class="condition" >mist</p>
         <div class="weatherCondition">
             <img class="weatherConditionImage" src="Images/humidity.png" alt="">
         </div>
-        <h2 class="Temp" >30 °C</h2>
+        <h2 class="Temp" >30°C</h2>
+        </div>
         <div class="tempStatus">
             <div class="windbox" >
                 <img class="statusImage" src="Images/wind.png" alt="">
