--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -12,7 +12,7 @@
      <div class="container">
         <h2 class="headline" >Weather APP</h2>
         <div class="weatherbtn">
-            <button onclick="showMyTemp();" class="yourWeather" >Your weather</button>
+            <!-- <button onclick="showMyTemp();" class="yourWeather" >Your weather</button> -->
             <button onclick="searchWeather();" class="SearchWeather" >Search weather</button>
         </div>
         <div class="searchField">
