--- a/tictacto/index.html
+++ b/tictacto/index.html
@@ -10,19 +10,19 @@
 <div class="container">
     <div class="grid">
     <div class="row">
-        <div onclick="clickbox(this)" id="0" class="col"></div>
-        <div onclick="clickbox(this)" id="1" class="col"></div>
-        <div onclick="clickbox(this)" id="2" class="col"></div>
+        <div onclick="HandleClick(this)" id="0" class="col"></div>
+        <div onclick="HandleClick(this)" id="1" class="col"></div>
+        <div onclick="HandleClick(this)" id="2" class="col"></div>
     </div>
     <div class="row">
-        <div onclick="clickbox(this)" id="3" class="col"></div>
-        <div onclick="clickbox(this)" id="4" class="col"></div>
-        <div onclick="clickbox(this)" id="5" class="col"></div>
+        <div onclick="HandleClick(this)" id="3" class="col"></div>
+        <div onclick="HandleClick(this)" id="4" class="col"></div>
+        <div onclick="HandleClick(this)" id="5" class="col"></div>
     </div>
     <div class="row">
-        <div onclick="clickbox(this)" id="6" class="col"></div>
-        <div onclick="clickbox(this)" id="7" class="col"></div>
-        <div onclick="clickbox(this)" id="8" class="col"></div>
+        <div onclick="HandleClick(this)" id="6" class="col"></div>
+        <div onclick="HandleClick(this)" id="7" class="col"></div>
+        <div onclick="HandleClick(this)" id="8" class="col"></div>
     </div>
 </div>
 </div>
